# docs/swagger.json
@@ -98,6 +98,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "csrf token",
+                        "name": "X-CSRF-TOKEN",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "cookie",
                         "name": "cookie",
                         "in": "header",
